--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "wordpress",
     "themes"
   ],
-  "author": "mejlvang",
+  "author": "Qubewave",
   "license": "MIT",
   "private": true,
   "browserslist": [
@@ -28,6 +28,7 @@
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
+    "jquery": "^3.5.0",
     "mini-css-extract-plugin": "^1.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "style-loader": "^2.0.0",
