--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "wordpress",
     "themes"
   ],
-  "author": "Qubewave",
-  "license": "MIT",
+  "author": "Qubewave AB",
+  "license": "GPL",
   "private": true,
   "browserslist": [
     "defaults"
   ],
+  "dependencies": {
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
@@ -28,17 +32,13 @@
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
-    "jquery": "^3.5.0",
     "mini-css-extract-plugin": "^1.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.8.0",
-    "webpack-cli": "^4.2.0"
-  },
-  "dependencies": {
-    "bootstrap": "^4.5.3",
-    "node-sass": "^5.0.0",
+    "webpack-cli": "^4.2.0",
+    "sass": "^1.55.0",
     "sass-loader": "^10.1.0"
   }
 }
