--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "prod": "cross-env NODE_ENV=production webpack --mode production --progress",
+    "build": "cross-env NODE_ENV=production webpack --mode production --progress",
     "dev": "cross-env NODE_ENV=development webpack --watch --mode development --progress",
     "clean": "rm -rf build/*"
   },
@@ -33,10 +33,10 @@
     "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.8.0",
+    "webpack": "^5.88.2",
     "webpack-cli": "^4.2.0",
     "sass": "^1.55.0",
     "sass-loader": "^10.1.0"
