--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "mini-css-extract-plugin": "^1.3.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "style-loader": "^2.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.88.2",
     "webpack-cli": "^4.2.0",
     "sass": "^1.55.0",
